--- a/part1_unit_testing_with_python/Untitled.ipynb
+++ b/part1_unit_testing_with_python/Untitled.ipynb
@@ -24,16 +24,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "..\n",
+      "...\n",
       "----------------------------------------------------------------------\n",
-      "Ran 2 tests in 0.003s\n",
+      "Ran 3 tests in 0.003s\n",
       "\n",
       "OK\n"
      ]
@@ -52,6 +52,12 @@
     "        phonebook = Phonebook()\n",
     "        phonebook.add(\"Bob\", 12345)\n",
     "        self.assertEqual(12345, phonebook.lookup(\"Bob\"))\n",
+    "        \n",
+    "    def test_missing_entry_raises_key_error(self):\n",
+    "        phonebook = Phonebook()\n",
+    "        with self.assertRaises(KeyError):\n",
+    "            phonebook.add(\"Bob\", 12345)\n",
+    "            phonebook.lookup(\"Erik\")\n",
     "    \n",
     "if __name__ == '__main__':\n",
     "    unittest.main(argv=['first-arg-is-ignored'], exit=False)"
