Added is_consistent test, failed, added is_consistent method, passed

--- a/part1_unit_testing_with_python/Untitled.ipynb
+++ b/part1_unit_testing_with_python/Untitled.ipynb
@@ -24,18 +24,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "...\n",
+      ".E..\n",
+      "======================================================================\n",
+      "ERROR: test_empty_phonebook_is_consistent (__main__.TestPhonebook)\n",
       "----------------------------------------------------------------------\n",
-      "Ran 3 tests in 0.003s\n",
+      "Traceback (most recent call last):\n",
+      "  File \"<ipython-input-30-d2f45abdd820>\", line 23, in test_empty_phonebook_is_consistent\n",
+      "    self.assertTrue(phonebook.is_consistent())\n",
+      "AttributeError: 'Phonebook' object has no attribute 'is_consistent'\n",
       "\n",
-      "OK\n"
+      "----------------------------------------------------------------------\n",
+      "Ran 4 tests in 0.005s\n",
+      "\n",
+      "FAILED (errors=1)\n"
      ]
     }
    ],
@@ -50,14 +58,19 @@
     "        \n",
     "    def test_lookup_entry_by_name(self):\n",
     "        phonebook = Phonebook()\n",
+    "        # The following two methods should probably be split out here\n",
+    "        # into their own test methods\n",
     "        phonebook.add(\"Bob\", 12345)\n",
     "        self.assertEqual(12345, phonebook.lookup(\"Bob\"))\n",
     "        \n",
     "    def test_missing_entry_raises_key_error(self):\n",
     "        phonebook = Phonebook()\n",
     "        with self.assertRaises(KeyError):\n",
-    "            phonebook.add(\"Bob\", 12345)\n",
     "            phonebook.lookup(\"Erik\")\n",
+    "            \n",
+    "    def test_empty_phonebook_is_consistent(self):\n",
+    "        phonebook = Phonebook()\n",
+    "        self.assertTrue(phonebook.is_consistent())\n",
     "    \n",
     "if __name__ == '__main__':\n",
     "    unittest.main(argv=['first-arg-is-ignored'], exit=False)"
@@ -72,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,12 +98,49 @@
     "        self.listings[name] = number\n",
     "        \n",
     "    def lookup(self, name):\n",
-    "        return self.listings[name]"
+    "        return self.listings[name]\n",
+    "    \n",
+    "    def is_consistent(self):\n",
+    "        for k, v in self.listings.items():\n",
+    "            if str(v)[:3] in self.listings.values():\n",
+    "                return False\n",
+    "        return True"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = str(12345)[:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'123'"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
