Refactored test case implementing setUp method to initialize Phonebook object

--- a/part1_unit_testing_with_python/Untitled.ipynb
+++ b/part1_unit_testing_with_python/Untitled.ipynb
@@ -24,26 +24,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      ".E..\n",
-      "======================================================================\n",
-      "ERROR: test_empty_phonebook_is_consistent (__main__.TestPhonebook)\n",
+      "...\n",
       "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-30-d2f45abdd820>\", line 23, in test_empty_phonebook_is_consistent\n",
-      "    self.assertTrue(phonebook.is_consistent())\n",
-      "AttributeError: 'Phonebook' object has no attribute 'is_consistent'\n",
+      "Ran 3 tests in 0.004s\n",
       "\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 4 tests in 0.005s\n",
-      "\n",
-      "FAILED (errors=1)\n"
+      "OK\n"
      ]
     }
    ],
@@ -53,24 +45,24 @@
     "\n",
     "class TestPhonebook(unittest.TestCase):\n",
     "    \n",
-    "    def test_create_phonebook(self):\n",
-    "        phonebook = Phonebook()\n",
+    "    def setUp(self):\n",
+    "        self.phonebook = Phonebook()\n",
+    "        \n",
+    "    def tearDown(self):\n",
+    "        pass\n",
     "        \n",
     "    def test_lookup_entry_by_name(self):\n",
-    "        phonebook = Phonebook()\n",
     "        # The following two methods should probably be split out here\n",
     "        # into their own test methods\n",
-    "        phonebook.add(\"Bob\", 12345)\n",
-    "        self.assertEqual(12345, phonebook.lookup(\"Bob\"))\n",
+    "        self.phonebook.add(\"Bob\", 12345)\n",
+    "        self.assertEqual(12345, self.phonebook.lookup(\"Bob\"))\n",
     "        \n",
     "    def test_missing_entry_raises_key_error(self):\n",
-    "        phonebook = Phonebook()\n",
     "        with self.assertRaises(KeyError):\n",
-    "            phonebook.lookup(\"Erik\")\n",
+    "            self.phonebook.lookup(\"Erik\")\n",
     "            \n",
     "    def test_empty_phonebook_is_consistent(self):\n",
-    "        phonebook = Phonebook()\n",
-    "        self.assertTrue(phonebook.is_consistent())\n",
+    "        self.assertTrue(self.phonebook.is_consistent())\n",
     "    \n",
     "if __name__ == '__main__':\n",
     "    unittest.main(argv=['first-arg-is-ignored'], exit=False)"
@@ -85,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,35 +97,6 @@
     "            if str(v)[:3] in self.listings.values():\n",
     "                return False\n",
     "        return True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s = str(12345)[:3]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'123'"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "s"
    ]
   },
   {
